switch background and size for search

--- a/src/components/TrailSearch.css
+++ b/src/components/TrailSearch.css
@@ -2,10 +2,10 @@
   margin: 0;
   padding: 10rem 3rem;
   width: 100%;
-  min-height: 150vh;
+  min-height: 50vh;
   height: auto;
-  /* background-image: url("https://lh3.googleusercontent.com/pw/ACtC-3ey8AxNXiGB_Fml5rjcd9x8vbcm9kyoO-eXZn8lnKZQiN_j-xOF7N1m068zGJGO81vAtzGlNoevmDccAV5bqp0iD3F4fdKWZyzZxaTYW8qg0apZlm8XHF5kctQBdYY1Wc0nXRuDGj_9xvG4cuNgFocWtg=w1408-h1126-no?authuser=0"); */
-  background-image: url("https://lh3.googleusercontent.com/pw/ACtC-3dLILoY_QaIbm8Cleky09aIoFZsVp376I1SRK0SMpuTmOHjgPOEXmsKUO5HWr60RwT-91zjCUlh1CizOkQ2pMj6bcrCrWrSGWM45Jlb1-49JYy9oJTNreuy3iyI7ddFEICkbvlNoz0NopauMSi3B1jdrw=w1842-h1224-no?authuser=0");
+  background-image: url("https://lh3.googleusercontent.com/pw/ACtC-3ey8AxNXiGB_Fml5rjcd9x8vbcm9kyoO-eXZn8lnKZQiN_j-xOF7N1m068zGJGO81vAtzGlNoevmDccAV5bqp0iD3F4fdKWZyzZxaTYW8qg0apZlm8XHF5kctQBdYY1Wc0nXRuDGj_9xvG4cuNgFocWtg=w1408-h1126-no?authuser=0");
+  /* background-image: url("https://lh3.googleusercontent.com/pw/ACtC-3dLILoY_QaIbm8Cleky09aIoFZsVp376I1SRK0SMpuTmOHjgPOEXmsKUO5HWr60RwT-91zjCUlh1CizOkQ2pMj6bcrCrWrSGWM45Jlb1-49JYy9oJTNreuy3iyI7ddFEICkbvlNoz0NopauMSi3B1jdrw=w1842-h1224-no?authuser=0"); */
 }
 
 
@@ -31,4 +31,9 @@
 
 .results-section {
   margin: 3rem 0;
+}
+
+#live {
+  color: rgb(128, 212, 11);
+  /* color: rgb(30, 124, 7); */
 }
