--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -8,7 +8,7 @@
 .second-block {
   margin: 0;
   padding: 2rem;
-  min-height: 90vh;
+  min-height: 80vh;
   height: auto;
 }
 
@@ -18,7 +18,7 @@
 
 .third-block {
   margin: 0;
-  padding: 2rem;
+  padding: 3.5rem 1rem 2rem 1rem;
   width: 100%;
   min-height: 90vh;
   height: auto;
